# taxi_app

./: .env.example  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
conf/: nginx.conf
conf/certs/: fullchain.pem  privkey.pem
core/: asgi.py  settings.py  urls.py
dispatcher/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py  views.py.save
dispatcher/static/: script.js
dispatcher/templates/dispatcher/: driver_details.html  drivers.html  history.html  index.html  login.html  map.html  order_details.html  orders.html  pricing.html
line/: admin.py  consumers.py  models.py  routing.py  serializers.py  views.py
orders/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
theme/templates/: base.html
users/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
users/middlewares/: authMiddleware.py
